--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="info">
         <button class="btn_atualizar" onclick="getInfo()">Atualizar</button>
-        <div id="data">
+        <div id="data" style="visibility: hidden">
             <p class="title">Veteranos</p>
             <div class="card_veteranos">
             </div>
